added <!-- generated automatically --> comment
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@971 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/python/templates/tll_build.template.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/python/templates/tll_build.template.xml
@@ -1,3 +1,4 @@
+<!-- This file was generated automatically -->
 <project name="TP1" default="compile" basedir=".">
 	<description>
         Build file for compiling and running MyTransformationModel
