user.package.name was removed unintnetionnally
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@1026 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/python/templates/tll_build.template.xml
+++ b/BasicMTL_projects/org.inria.mtl.Eclipse3plugin/python/templates/tll_build.template.xml
@@ -32,7 +32,7 @@
 	<!-- set user properties for this build -->
 	<property name="library.name" value=""/>
 	<property name="user.src.path" location=""/>
-	<property name="user.package.name" value=""/>
+	<property name="user.package.name" value="${library.name}"/>
 	<property name="user.build.src" location="${build.src}/${library.name}"/>
 	<property name="user.needed.TLL.path" location="${Runtime.TLL.path}"/>
 	<!-- other TLL needed in order to compile this one -->
